--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,6 @@
-asgiref==3.9.1
-attrs==25.3.0
-cffi==1.17.1
-cryptography==45.0.5
 Django==5.2.5
-django-cors-headers==4.7.0
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-filelock==3.18.0
-gunicorn==23.1.0
-packaging==25.0
-pillow==11.3.0
-psycopg2-binary==2.9.10
-pycparser==2.22
-PyJWT==2.10.1
+gunicorn==23.0.0
+psycopg2-binary==2.9.9
 python-decouple==3.8
-sqlparse==0.5.3
-whitenoise==6.8.2
-wheel==0.45.1
+whitenoise==6.7.0
+Pillow==10.4.0
