Set up Cloudinary for image storage (models, settings, fields)

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ DATABASE_PORT=5432
 
 # Railway automatically sets DATABASE_URL, you can use that instead:
 # DATABASE_URL=postgresql://user:password@host:port/database
+
+# Cloudinary Configuration
+# Get these from your Cloudinary Dashboard: https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
